--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/friedrice.html" target="_blank">Fried Rice</a>
-    <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
-    <a href="./recipes/lasagna.html" target="_blank">lasagna</a>
-</body>
+    <ul>
+      <a href="./recipes/friedrice.html" target="_blank">Fried Rice</a>
+      <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
+      <a href="./recipes/lasagna.html" target="_blank">lasagna</a>
+    </ul>
+  </body>
 </html>
