--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <a href="./recipes/friedrice.html" target="_blank">Fried Rice</a>
-      <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
-      <a href="./recipes/lasagna.html" target="_blank">lasagna</a>
+      <li><a href="./recipes/friedrice.html" target="_blank">Fried Rice</a></li>
+      <li>
+        <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
+      </li>
+      <li><a href="./recipes/lasagna.html" target="_blank">lasagna</a></li>
     </ul>
   </body>
 </html>
