fix spelling error

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>
         <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
       </li>
-      <li><a href="./recipes/lasagna.html" target="_blank">lasagna</a></li>
+      <li><a href="./recipes/lasagna.html" target="_blank">Lasagna</a></li>
     </ul>
   </body>
 </html>
