--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/friedrice.html" target="_blank">Fried Rice</a></li>
+      <li><a href="./recipes/friedrice.html" target="_self">Fried Rice</a></li>
       <li>
-        <a href="./recipes/jollofrice.html" target="_blank">Jollof Rice</a>
+        <a href="./recipes/jollofrice.html" target="_self">Jollof Rice</a>
       </li>
-      <li><a href="./recipes/lasagna.html" target="_blank">Lasagna</a></li>
+      <li><a href="./recipes/lasagna.html" target="_self">Lasagna</a></li>
     </ul>
   </body>
 </html>
