--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <a href="../index.html">Home</a>
+    </header>
     <h1>Fried Rice</h1>
     <img
       src="../img/friedrice.jpeg"
