--- a/recipes/jollofrice.html
+++ b/recipes/jollofrice.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <a href="../index.html">Home</a>
+    </header>
     <h1>Jollof Rice</h1>
     <img src="../img/jollofrice.jpg" alt="Jollof Rice" />
     <p>
