--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <a href="../index.html">Home</a>
+    </header>
     <h1>Lasagna</h1>
     <img src="../img/lasagna.jpg" alt="Lasagna" width="700" height="500" />
     <p>
