--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/friedrice.html" target="_self">Fried Rice</a></li>
-      <li>
-        <a href="./recipes/jollofrice.html" target="_self">Jollof Rice</a>
-      </li>
-      <li><a href="./recipes/lasagna.html" target="_self">Lasagna</a></li>
-    </ul>
+    <header class="header">
+      <a href="https://www.theodinproject.com/dashboard" target="_blank>"
+        ><img class="logo" src="./img/download.png" alt="Odin logo"
+      /></a>
+    </header>
+    <h1>Odin Recipies</h1>
+    <p class="contents">
+      Click on our currently available dishes to view the recipes
+    </p>
+    <table class="contents-table">
+      <tr>
+        <th>Menu</th>
+      </tr>
+      <tr>
+        <td>
+          <a href="./recipes/friedrice.html" target="_self">Fried Rice</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./recipes/jollofrice.html" target="_self">Jollof Rice</a>
+        </td>
+      </tr>
+      <tr>
+        <td><a href="./recipes/lasagna.html" target="_self">Lasagna</a></td>
+      </tr>
+    </table>
   </body>
 </html>
